--- a/assets/plating.css
+++ b/assets/plating.css
@@ -28,8 +28,26 @@
 #about{
 	margin: 0px;
 	height: 2000px;
-	background-color: #222222;
+	background-color: #333333;
 	color:#DDDDDD;
+}
+#projects{
+	margin: 0px;
+	height: 1000px;
+	background-color: #EEEEEE;
+	color:#333333;
+}
+#contact{
+	margin: 0px;
+	height: 500px;
+	background-color: #333333;
+	color:#DDDDDD;
+}
+#homehr{
+	border-top: 2px solid #eee;
+}
+#abouthr{
+	border-top: 2px solid #F96B55;
 }
 
 html{ 
