--- a/assets/plating.css
+++ b/assets/plating.css
@@ -18,6 +18,10 @@
 	vertical-align: middle;
 }
 
+.col-lg-4{
+	padding: 20px;
+}
+
 #maintitle{
 	text-shadow: 2px 2px #333333;
 }
@@ -30,6 +34,14 @@
 	height: 2000px;
 	background-color: #333333;
 	color:#DDDDDD;
+}
+#aboutme{
+	margin-left: 20%;
+	margin-right: 20%;
+}
+#interests{
+	margin-left: 12%;
+	margin-right: 12%;
 }
 #projects{
 	margin: 0px;
