Using font-awesome for lots of icons, font and the fact that everything in there is easily style-able (whatever that means)
Started refactoring for aesthetics, made sure that there will be a constant amount of lines of text so even people with 5k screens can see little paragraphs...

PS: Too much work leaves me too burnt out to really work on this, but hey, a little progress is better than none...

--- a/assets/plating.css
+++ b/assets/plating.css
@@ -36,13 +36,24 @@
 	color:#DDDDDD;
 }
 #aboutme{
-	margin-left: 20%;
-	margin-right: 20%;
+	margin-left: auto;
+    margin-right: auto;
+	max-width: 600px;
+	text-align: center;
 }
 #interests{
-	margin-left: 12%;
-	margin-right: 12%;
+	margin-top: 60px;
+	margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    text-align: center;
 }
+#interest-text{
+	max-width: 300px;
+	margin-left: auto;
+    margin-right: auto;
+}
+
 #projects{
 	margin: 0px;
 	height: 1000px;
