--- a/assets/plating.css
+++ b/assets/plating.css
@@ -44,25 +44,28 @@
 }
 #about{
 	margin: 0px;
-	height: 2000px;
+	padding-bottom: 40px;
+	height: auto;
 	background-color: #333333;
 	color:#DDDDDD;
+	vertical-align: middle;
 }
 #aboutme{
 	margin-left: auto;
     margin-right: auto;
-	max-width: 600px;
+	max-width: 900px;
 	text-align: center;
+	font-size: 18px;
 }
 #interests{
-	margin-top: 60px;
+	margin-top: 40px;
 	margin-left: auto;
     margin-right: auto;
-    max-width: 1200px;
+    max-width: 940px;
     text-align: center;
 }
 #interest-text{
-	max-width: 300px;
+	max-width: 280px;
 	margin-left: auto;
     margin-right: auto;
 }
