--- a/assets/plating.css
+++ b/assets/plating.css
@@ -30,6 +30,12 @@
 #scroller:hover{
     opacity: 0.8;
 }
+#scroller-arrow{
+    display:block;
+    margin:auto;
+    margin-top: -48px;
+    
+}
 
 .col-lg-4{
 	padding: 20px;
@@ -72,10 +78,70 @@
 
 #projects{
 	margin: 0px;
-	height: 1000px;
+	height: auto;
 	background-color: #EEEEEE;
 	color:#333333;
 }
+
+#projects-intro{
+	margin-left: auto;
+    margin-right: auto;
+	max-width: 900px;
+	text-align: center;
+	font-size: 18px;
+	color: #333333;
+}
+
+.container-fluid .project-photo{
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+	width:900px;
+   	height:750px;
+  	display: block;
+  	background-size:cover;
+	border-radius:5px;
+	overflow:hidden;
+}
+
+.project-overlay{  
+	background:rgba(0,0,0, .75);
+	text-align:center;
+	opacity:0;
+	-webkit-transition: opacity .25s ease;
+	-moz-transition: opacity .25s ease;
+	height: inherit;
+	border-radius:15px;
+	position: relative;
+	vertical-align: middle;
+}
+
+.container-fluid .project-photo:hover .project-overlay {
+	opacity:1;
+}
+
+#tris{
+	background:url(2048-tris.png);
+	background-repeat: no-repeat;
+	background-size: 900px;
+	width:900px;
+   	height:750px;
+}
+
+#project-text{  
+	font-family:Helvetica;
+	color:rgba(255,255,255,.85);
+	font-size:32px;
+	margin: 0;
+   	position: absolute;               
+   	top: 50%;                        
+   	left: 50%;
+   	margin-right: -50%;
+   	transform: translate(-50%, -50%)
+   	
+}
+
 #contact{
 	margin: 0px;
 	height: 100%;
