--- a/assets/plating.css
+++ b/assets/plating.css
@@ -78,6 +78,7 @@
 
 #projects{
 	margin: 0px;
+	padding-bottom: 25px;
 	height: auto;
 	background-color: #EEEEEE;
 	color:#333333;
@@ -98,9 +99,10 @@
 	margin-right: auto;
 	margin-left: auto;
 	width:900px;
-   	height:750px;
+   	height:640px;
   	display: block;
   	background-size:cover;
+  	background-position: center center; 
 	border-radius:5px;
 	overflow:hidden;
 }
@@ -125,8 +127,20 @@
 	background:url(2048-tris.png);
 	background-repeat: no-repeat;
 	background-size: 900px;
+	background-position: center center; 
 	width:900px;
-   	height:750px;
+   	height:640px;
+   	vertical-align: middle;
+}
+
+#quadtree{
+	background:url(quadtree_test.png);
+	background-repeat: no-repeat;
+	background-size: 870px;
+	background-position: center center; 
+	width:900px;
+   	height:640px;
+   	vertical-align: middle;
 }
 
 #project-text{  
@@ -134,6 +148,7 @@
 	color:rgba(255,255,255,.85);
 	font-size:32px;
 	margin: 0;
+	padding: 10px;
    	position: absolute;               
    	top: 50%;                        
    	left: 50%;
@@ -147,6 +162,13 @@
 	height: 100%;
 	background-color: #333333;
 	color:#DDDDDD;
+}
+
+#footer{
+	margin: 0px;
+	padding-bottom: 15px;
+	background-color: #EEEEEE;
+	color:#333333;
 }
 #homehr{
 	border-top: 2px solid #eee;
