--- a/assets/plating.css
+++ b/assets/plating.css
@@ -98,8 +98,7 @@
 	padding-left: 15px;
 	margin-right: auto;
 	margin-left: auto;
-	width:900px;
-   	height:640px;
+	width:60%;
   	display: block;
   	background-size:cover;
   	background-position: center center; 
@@ -126,10 +125,8 @@
 #tris{
 	background:url(2048-tris.png);
 	background-repeat: no-repeat;
-	background-size: 900px;
+	/*background-size: 900px;*/
 	background-position: center center; 
-	width:900px;
-   	height:640px;
    	vertical-align: middle;
 }
 
