--- a/assets/plating.css
+++ b/assets/plating.css
@@ -102,6 +102,7 @@
   	display: block;
   	background-size:cover;
   	background-position: center center; 
+  	background-repeat: no-repeat;
 	border-radius:5px;
 	overflow:hidden;
 }
@@ -124,36 +125,23 @@
 
 #tris{
 	background:url(2048-tris.png);
-	background-repeat: no-repeat;
-	/*background-size: 900px;*/
-	background-position: center center; 
-   	vertical-align: middle;
+	background-size:cover;
 }
 
 #quadtree{
 	background:url(quadtree_test.png);
-	background-repeat: no-repeat;
-	background-size: 870px;
-	background-position: center center; 
-	width:900px;
-   	height:640px;
-   	vertical-align: middle;
+	background-size:cover;
 }
 
 #gravisim{
 	background:url(gravisim.png);
-	background-repeat: no-repeat;
-	background-size: 870px;
-	background-position: center center; 
-	width:900px;
-   	height:640px;
-   	vertical-align: middle;
+	background-size:cover;
 }
 
 #project-text{  
 	font-family:Helvetica;
 	color:rgba(255,255,255,.85);
-	font-size:32px;
+	font-size: 2vw;
 	margin: 0;
 	padding: 10px;
    	position: absolute;               
